@@ -161,7 +161,6 @@ int FileBinaryOutputPort::fileno() const
     return fd_;
 }
 
-
 void FileBinaryOutputPort::bufFlush()
 {
     if (bufferMode_ == LINE || bufferMode_ == BLOCK) {
@@ -170,15 +169,13 @@ void FileBinaryOutputPort::bufFlush()
     }
 }
 
+
 int FileBinaryOutputPort::bufWrite(uint8_t* data, int reqSize)
 {
     if (bufferMode_ == NONE) {
         return write(fd_, data, reqSize);
     }
     if (bufferMode_ == LINE) {
-#if 1
-        return write(fd_, data, reqSize);
-#else
         int writeSize = 0;
         while (writeSize < reqSize) {
             int bufDiff = BUF_SIZE - bufIdx_;
@@ -189,7 +186,7 @@ int FileBinaryOutputPort::bufWrite(uint8_t* data, int reqSize)
                     break;
                 }
             }
-            memcpy(buffer_+bufIdx_, data+writeSize, 1);
+            *(buffer_+bufIdx_) = *(data+writeSize);
             bufIdx_++;
             writeSize++;
             if (buffer_[bufIdx_-1] == '\n') {
@@ -197,7 +194,6 @@ int FileBinaryOutputPort::bufWrite(uint8_t* data, int reqSize)
             }
         }
         return writeSize;
-#endif
     }
     if (bufferMode_ == BLOCK) {
         int writeSize = 0;
